# synapse

./: .dockerignore  .gitignore  .test-commit  16680892147769332735_schema-type-driven-generation.md  CLAUDE.md  Dockerfile  PLAN-JSREPL.md  PLAN-REPL.md  README.md  TICKET_2.5_QUICK_START.md  TICKET_2.5_SUMMARY.md  VERIFICATION_REPORT.md  cabal.project  docker-compose.yml  hub-synapse.cabal  plexus-synapse.cabal  substrate-synapse.cabal  symbols.cabal  synapse.cabal
.github/workflows/: ci.yml
.hyperforge/: config.toml
.hyperforge/hooks/: pre-push
.substrate/templates/: default.mustache
.substrate/templates/arbor/: context_get_handles.mustache  context_get_path.mustache  context_handles.mustache  context_leaves.mustache  context_list_leaves.mustache  context_path.mustache  context_path_data.mustache  node_archived.mustache  node_children.mustache  node_claimed.mustache  node_create_external.mustache  node_create_text.mustache  node_created.mustache  node_data.mustache  node_deleted.mustache  node_get.mustache  node_get_children.mustache  node_get_parent.mustache  node_get_path.mustache  node_parent.mustache  node_refs.mustache  node_released.mustache  node_scheduled_deletion.mustache  node_updated.mustache  nodes_scheduled.mustache  tree-list.mustache  tree_archived.mustache  tree_claim.mustache  tree_claimed.mustache  tree_create.mustache  tree_created.mustache  tree_data.mustache  tree_deleted.mustache  tree_get.mustache  tree_get_skeleton.mustache  tree_list.mustache  tree_list_archived.mustache  tree_list_scheduled.mustache  tree_refs.mustache  tree_release.mustache  (+8 more)
.substrate/templates/bash/: execute.mustache  exit.mustache  stderr.mustache  stdout.mustache
.substrate/templates/callisto/: body.mustache  info.mustache  system.mustache
.substrate/templates/changelog/: add.mustache  check.mustache  entries.mustache  entry_added.mustache  get.mustache  list.mustache  queue_add.mustache  queue_added.mustache  queue_complete.mustache  queue_entries.mustache  queue_get.mustache  queue_item.mustache  queue_list.mustache  queue_pending.mustache  queue_updated.mustache  startup_check.mustache  status.mustache
.substrate/templates/claudecode/: chat.mustache  chat_async.mustache  (+19 more)
app/: Algebra.hs  Dyn.hs  Main.hs
benchmark/: ir-construction.sh  manual-bench.sh
benchmark/results/: BENCHMARK_RESULTS.md
docs/: CLEANUP-PLAN.md  KNOWN_ISSUES.md  PROTOCOL_TEST_RUNNER.md  SYNAPSE.md  TODO-simple-string-enums.md  protocol-reporter.md
docs/architecture/: 16671072897961521663_substrate-to-plexus-rename.md  16672797598515578623_newtype-unwrapping-in-help.md  16673264336036332543_synapse-cc-pipeline.md  16675729999709551615_ir-construction-performance-analysis.md  16677357852794265599_multi-backend-discovery-implementation.md  16677363587163129599_substrate-error-improvements.md  16677364953367891711_error-handling-improvements.md  16677498315934040575_array-and-normalization-fixes.md  16677504937180061695_self-template-crud-implementation.md  16677703697413990655_self-command-namespace.md  16677764457979385599_typescript-naming-convention-fix.md  16677786647750223615_typescript-codegen-root-cause.md  16677793986132070655_typescript-codegen-snake-case.md  16677885089803091711_typeref-restructuring-handoff.md  16677936867500161535_typescript-namespace-collision.md  16678045264785245695_template-rendering-challenges.md  16678090000000000000_ts-stub-generation-fix.md  16678100000000000000_schema-type-deduplication.md  16678110000000000000_namespace-refactoring.md  16678120851687513599_synapse-reimplementation-plan.md  16679015889465110527_synapse-legacy-cleanup.md  16679174944041108735_method-schema-spec.md  16679181867755938559_synapse-cli-help-fix.md  16679314737030628607_ir-codegen-chain.md  16679517135570018559_multi-hub-transport-envelope.md  16679534049315001599_callevent-unwrap.md  16679536519907867647_plexus-call-streaming.md  16679600499658362623_parallel-implementation-plan.md  16679613932789736703_compiler-architecture.md  16679659154076396543_schema-client-consumption.md  16679669138551173631_struct-to-plugin-macro.md  16679700723322559487_recursion-schemes-curriculum.md  16679707107310088703_categorical-boundaries.md  16679899679207890687_schema-query-refinement.md  16679915429155208703_synapse-algebra-reflection.md  16679919067487258623_algebraic-cli-implementation.md  16679921145800384511_shallow-schema-implementation.md  16679932646201623551_shallow-schema-api.md  16679960320421152511_nested-plugin-routing.md  16680127584921047551_category-verification-report.md  (+48 more)
examples/: ControlLogoPreview.hs  LogoPreview.hs  SchemaDiscovery.hs  SynapseDiagonal.hs  SynapseLightning.hs  SynapseLogoColumns.hs  SynapseLogoFlow.hs
meaning/: meaning.cabal
meaning/src/Plexus/: Types.hs
plans/SELF/: SELF-1.md  SELF-2.md  SELF-3.md  SELF-4.md  SELF-5.md  SELF-6.md  SELF-7.md  SELF-8.md
plans/SYNAPSE/: SYNAPSE-1.md  SYNAPSE-2.md  SYNAPSE-3.md  SYNAPSE-4.md  SYNAPSE-5.md  SYNAPSE-6.md  SYNAPSE-7.md  SYNAPSE-8.md
src/: Plexus.hs
src/Activation/: Arbor.hs  Bash.hs  Cone.hs  Health.hs
src/Plexus/: Client.hs  Dynamic.hs  Renderer.hs  Schema.hs  Template.hs  Types.hs
src/Synapse/: Bidir.hs  Cache.hs  Deprecation.hs  Log.hs  Monad.hs  Renderer.hs  Self.hs  Transport.hs
synapse-types/: README.md  TEST_STATUS.md  synapse-types.cabal
synapse-types/src/Synapse/Types/: Network.hs  Protocol.hs  Refined.hs  WireFormat.hs
synapse-types/test/: Main.hs
synapse-types/test/Synapse/Types/: ProtocolSpec.hs  RefinedSpec.hs  RegressionSpec.hs
test/: ArborTest.hs  BIDIR_TEST_SUMMARY.md  BidirIntegrationSpec.hs  BidirSpec.hs  CLISpec.hs  CacheInvalidationSpec.hs  DeprecationSpec.hs  GuidanceSpec.hs  IR12MethodRoleSpec.hs  IRSpec.hs  KeychainSpec.hs  ParseSpec.hs  PathNormalizationSpec.hs  ProtocolTestDemo.hs  README.md  RendererSpec.hs  ReporterDemo.hs  Req8RenderSpec.hs  SchemaDecodeSpec.hs  SelfCommandSpec.hs  SelfMigrationSpec.hs  SelfSafeWriteSpec.hs  SelfSpec.hs  StreamTrackerSpec.hs  TemplateGenSpec.hs  TypeRefJson.hs  ValidationReportTest.hs  WebSocketRaw.hs  validate_codegen.sh
(+201 files in other folders)
