cabal-version:      3.0
name:               symbols
version:            0.1.0.0
synopsis:           Haskell frontend for Plexus - typed APIs for LLM orchestration
license:            MIT
author:
maintainer:
build-type:         Simple

library
  exposed-modules:
    -- Plexus - the nerve center (RPC layer)
    Plexus
    Plexus.Types
    Plexus.Client
    Plexus.Schema
    Plexus.Schema.Cache
    Plexus.Dynamic
    Plexus.Renderer
    -- Activation APIs - capabilities the plexus can perform
    Activation.Arbor
    Activation.Cone
    Activation.Bash
    Activation.Health
  other-modules:
  build-depends:
    base ^>=4.17 || ^>=4.18 || ^>=4.19,
    aeson >= 2.0,
    aeson-pretty >= 0.8,
    text >= 2.0,
    bytestring >= 0.11,
    websockets >= 0.13,
    network >= 3.1,
    async >= 2.2,
    stm >= 2.5,
    streaming >= 0.2,
    mtl >= 2.3,
    containers >= 0.6,
    scientific >= 0.3,
    vector >= 0.13,
    directory >= 1.3,
    time >= 1.9,
    filepath >= 1.4,
    optparse-applicative >= 0.18
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards

executable symbols-cli
  main-is:          Main.hs
  build-depends:
    base,
    symbols,
    aeson,
    text,
    bytestring,
    streaming,
    optparse-applicative >= 0.18
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions:
    OverloadedStrings

executable symbols-dyn
  main-is:          Dyn.hs
  build-depends:
    base,
    symbols,
    aeson,
    text,
    bytestring,
    streaming,
    containers,
    optparse-applicative >= 0.18,
    directory >= 1.3,
    time >= 1.9,
    filepath >= 1.4,
    process >= 1.6
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions:
    OverloadedStrings

executable schema-discovery
  main-is:          SchemaDiscovery.hs
  build-depends:
    base,
    symbols,
    aeson,
    text,
    streaming
  hs-source-dirs:   examples
  default-language: GHC2021
  default-extensions:
    OverloadedStrings

test-suite arbor-test
  type:             exitcode-stdio-1.0
  main-is:          ArborTest.hs
  build-depends:
    base,
    symbols,
    text,
    streaming
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
