cabal-version:      3.0
name:               synapse
version:            0.1.0.0
synopsis:           Haskell frontend for Plexus - typed APIs for LLM orchestration
license:            MIT
author:
maintainer:
build-type:         Simple

flag build-examples
  description: Build example programs (schema-discovery)
  default:     False
  manual:      True

library
  exposed-modules:
    -- Plexus - the nerve center (RPC layer)
    Plexus
    Plexus.Client
    Plexus.Dynamic
    Plexus.Renderer
    -- Template generation (schema-driven)
    Plexus.Template
    Plexus.Template.Schema
    Plexus.Template.Gen
    Plexus.Template.Render
    -- Activation APIs - capabilities the plexus can perform
    Activation.Arbor
    Activation.Cone
    Activation.Bash
    Activation.Health
  other-modules:
  build-depends:
    base ^>=4.17 || ^>=4.18 || ^>=4.19,
    meaning,
    aeson >= 2.0,
    aeson-pretty >= 0.8,
    text >= 2.0,
    bytestring >= 0.11,
    websockets >= 0.13,
    network >= 3.1,
    async >= 2.2,
    stm >= 2.5,
    streaming >= 0.2,
    mtl >= 2.3,
    containers >= 0.6,
    scientific >= 0.3,
    vector >= 0.13,
    directory >= 1.3,
    time >= 1.9,
    filepath >= 1.4,
    optparse-applicative >= 0.18,
    stache >= 2.3
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards

executable synapse
  main-is:          Dyn.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson,
    text,
    bytestring,
    streaming,
    containers,
    optparse-applicative >= 0.18,
    directory >= 1.3,
    time >= 1.9,
    filepath >= 1.4,
    process >= 1.6
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions:
    OverloadedStrings

executable schema-discovery
  main-is:          SchemaDiscovery.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson,
    text,
    streaming
  hs-source-dirs:   examples
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
  if !flag(build-examples)
    buildable: False

test-suite arbor-test
  type:             exitcode-stdio-1.0
  main-is:          ArborTest.hs
  build-depends:
    base,
    meaning,
    synapse,
    text,
    streaming
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings

test-suite guidance-test
  type:             exitcode-stdio-1.0
  main-is:          GuidanceSpec.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson >= 2.0,
    aeson-qq >= 0.8,
    text >= 2.0,
    bytestring >= 0.11,
    hspec >= 2.10,
    QuickCheck >= 2.14,
    streaming >= 0.2
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    RecordWildCards
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite cache-invalidation-test
  type:             exitcode-stdio-1.0
  main-is:          CacheInvalidationSpec.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson >= 2.0,
    text >= 2.0,
    bytestring >= 0.11,
    hspec >= 2.10,
    directory >= 1.3,
    temporary >= 1.3,
    containers >= 0.6
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite renderer-test
  type:             exitcode-stdio-1.0
  main-is:          RendererSpec.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson >= 2.0,
    aeson-qq >= 0.8,
    text >= 2.0,
    hspec >= 2.10
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    QuasiQuotes
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite template-gen-test
  type:             exitcode-stdio-1.0
  main-is:          TemplateGenSpec.hs
  build-depends:
    base,
    meaning,
    synapse,
    aeson >= 2.0,
    aeson-qq >= 0.8,
    text >= 2.0,
    containers >= 0.6,
    hspec >= 2.10
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    QuasiQuotes
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
