cabal-version:      3.0
name:               synapse
version:            0.1.0.0
synopsis:           Algebraic CLI for Plexus - coalgebraic schema navigation
license:            MIT
author:
maintainer:
build-type:         Simple

flag build-examples
  description: Build example programs (schema-discovery)
  default:     False
  manual:      True

library
  exposed-modules:
    Synapse.Schema.Types
    Synapse.Schema.Functor
    Synapse.Monad
    Synapse.Algebra.Navigate
    Synapse.Algebra.Render
    Synapse.Algebra.Complete
    Synapse.Algebra.Walk
    Synapse.Algebra.TemplateGen
    Synapse.Algebra.Recursion
    Synapse.Transport
    Synapse.Cache
    Synapse.Renderer
  build-depends:
    base ^>=4.17 || ^>=4.18 || ^>=4.19,
    substrate-protocol,
    aeson >= 2.0,
    text >= 2.0,
    bytestring >= 0.11,
    websockets >= 0.13,
    network >= 3.1,
    async >= 2.2,
    stm >= 2.5,
    streaming >= 0.2,
    mtl >= 2.3,
    transformers >= 0.6,
    containers >= 0.6,
    unordered-containers >= 0.2,
    hashable >= 1.4,
    prettyprinter >= 1.7,
    mustache >= 2.4,
    directory >= 1.3,
    filepath >= 1.4,
    yaml >= 0.11,
    vector >= 0.12,
    scientific >= 0.3
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards

executable synapse
  main-is:          Main.hs
  build-depends:
    base,
    substrate-protocol,
    synapse,
    aeson,
    text,
    bytestring,
    mtl,
    containers,
    directory >= 1.3,
    optparse-applicative >= 0.18,
    prettyprinter >= 1.7
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    RecordWildCards
    LambdaCase

executable schema-discovery
  main-is:          SchemaDiscovery.hs
  build-depends:
    base,
    substrate-protocol,
    synapse,
    aeson,
    text,
    streaming
  hs-source-dirs:   examples
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
  if !flag(build-examples)
    buildable: False

test-suite cli-test
  type:             exitcode-stdio-1.0
  main-is:          CLISpec.hs
  build-depends:
    base,
    text >= 2.0,
    process >= 1.6,
    hspec >= 2.10
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
  ghc-options:      -threaded
