cabal-version:      3.0
name:               meaning
version:            0.1.0.0
synopsis:           Core types and schemas for Plexus
license:            MIT
author:
maintainer:
build-type:         Simple

library
  exposed-modules:
    Plexus.Types
    Plexus.Schema
    Plexus.Schema.Cache
  build-depends:
    base ^>=4.17 || ^>=4.18 || ^>=4.19,
    aeson >= 2.0,
    text >= 2.0,
    bytestring >= 0.11,
    containers >= 0.6,
    scientific >= 0.3,
    vector >= 0.13,
    directory >= 1.3,
    time >= 1.9,
    filepath >= 1.4
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
